Bug 59405, japanese input problem r = sfraser, a = jdunn this checkin might not be available in trunk, check bugreport for current status.